# tricolour

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Jenkinsfile.sh  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.travis/: pep8.docker  python2.docker  python35.docker  python36.docker
conf/: default.yaml
docker/: python310.docker  python36.docker  python38.docker
docker/release_context/: README  release.docker  tag_release.sh
docs/: Makefile  conf.py  examples.rst  index.rst  installation.rst  modules.rst  tricolour.apps.rst  tricolour.apps.tricolour.rst  tricolour.rst  usage.rst
docs/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: custom.yaml  test_acceptance.py  test_config.py  test_flagging.py  test_flagging_additional.py  test_packing.py  test_statsbook.py  test_stokes.py  test_tricolour.py  test_window_statistics.py
tricolour/: __init__.py  banner.py  config.py  dask.py  dask_wrappers.py  flagging.py  mask.py  packing.py  post_mortem_handler.py  sched_context.py  statsbook.py  stokes.py  util.py  window_statistics.py
tricolour/apps/: tricolour.py
tricolour/conf/: default.yaml
tricolour/data/: 4k_uhfband_meerkat.staticmask
tricolour/scripts/: tricolour
tricolour/tests/: test_acceptance.py  test_flagging.py  test_flagging_additional.py  test_packing.py  test_stokes.py  test_window_statistics.py
(+4 files in other folders)
